# tru-esg-audit-pipeline

./: .gitignore  Final_Table.py  README.md  TRU-ESG_Scenario_Library.docx  app.py  compliance_audit.py  energy_audit.py  etl_sync.py  facility_audit.py  generate_data.py  generate_reference_csvs.py  pyproject.toml  raw_sensor_data_202411.csv  registry.py  requirements.txt  upload_to_gcs.py  upload_to_sql.py
data/: dim_asset_regression_models.csv  dim_assets.csv  dim_baseline_prior_month.csv  dim_esg_compliance_parameters.csv  dim_invoices_proxy.csv  dim_invoices_proxy.py  dim_kpi_summary.csv  dim_priority_actions.csv  dim_scenarios.csv  download_telemetry.py  download_weather.py  energy_audit_log.csv  esg_compliance_audit_log.csv  external_auckland_weather.csv  facility_audit_log.csv  fact_audit_events.csv  fact_exemption_registry.csv  fact_telemetry_ledger.csv  fact_travel_expense.csv  fact_travel_expense.py  fact_waste_manifest.csv  fact_waste_manifest.py  generate_7_scenario_mock_data.py  generate_weather_csv.py  nabers_au_summary.csv  nabersnz_summary.csv  scope3_reference_data.csv
