[project]
name = "tru-esg-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "holiday>=1.0.0",
    "holidays>=0.97",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.57.0",
]
